# hh-bot

./: Makefile  README.md  background.py  bot.py  manage.py  pyproject.toml
config/: tokens.json
handlers/: add_resume_to_schedule.py
hh_app/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
services/: main.py
templates/: base.html  index.html  login.html  run_bot.html
templates/errors/: 404.html  500.html
templates/includes/: footer.html  navbar.html
