[tool.poetry]
name = "alex-hh-bot"
version = "0.1.0"
description = "Auto-raise-hh-resumes"
authors = ["alex-j-fox <alex-j-fox@yandex.ru>"]
readme = "README.md"
packages = [{include = "alex_hh_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.15"
django-bootstrap5 = "^24.2"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}