[tool.poetry]
name = "alex-hh-bot"
version = "0.1.0"
description = "Auto-raise-hh-resumes"
authors = ["alex-j-fox <alex-j-fox@yandex.ru>"]
readme = "README.md"
packages = [{include = "alex_hh_bot"}]

[tool.poetry.dependencies]
python = "^3.8.10"
django = "^4.2.15"
django-bootstrap5 = "^24.2"
psycopg2-binary = "^2.9.5"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
python-dotenv = "0.21.0"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}

aiofiles = "22.1.0"
aiogram = "2.22.1"
aiohttp = "3.8.1"
aiosignal = "1.2.0"
async-generator = "1.10"
async-timeout = "4.0.2"
attrs = "22.1.0"
babel = "2.9.1"
beautifulsoup4 = "4.11.1"
blinker = "1.5"
brotli = "1.0.9"
certifi = "2022.9.14"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
colorama = "0.4.5"
cryptography = "38.0.1"
fake-useragent = "1.2.1"
frozenlist = "1.3.1"
h11 = "0.13.0"
h2 = "4.1.0"
hpack = "4.0.0"
hyperframe = "6.0.1"
idna = "3.4"
kaitaistruct = "0.10"
lxml = "4.9.1"
multidict = "6.0.2"
outcome = "1.2.0"
pyasn1 = "0.4.8"
pycparser = "2.21"
pydivert = "2.1.0"
pyopenssl = "22.0.0"
pyparsing = "3.0.9"
pysocks = "1.7.1"
pytz = "2022.2.1"
requests = "2.28.1"
selenium = "4.4.3"
selenium-wire = "4.6.5"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
soupsieve = "2.3.2.post1"
tqdm = "4.64.1"
trio = "0.21.0"
trio-websocket = "0.9.2"
urllib3 = "1.26.12"
webdriver-manager = "3.8.3"
wsproto = "1.2.0"
yarl = "1.8.1"
zstandard = "0.18.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
  
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

